# godot-gdscript-toolkit

./: .gitignore  .gitmodules  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REPRO  action.yml  flake.nix  gdscript.lark  makefile  mypy.ini  parser.py  pylintrc  pyproject.toml  setup.py  test_parser.py  tox.ini  tree_example.py  tree_example_fixed.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  tests.yml
editor-plugins/emacs/: gdformat.el
editor-plugins/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
gdtoolkit/: __init__.py  gdscript.lark  linter.py  parser.py
gdtoolkit/common/: ast.py  exceptions.py  types.py  utils.py
gdtoolkit/formatter/: __init__.py  __main__.py  annotation.py  block.py  class_statement.py  comments.py  const_statement.py  constants.py  context.py  enum.py  exceptions.py  expression.py  expression_to_str.py  expression_utils.py  formatter.py  function_statement.py  function_statement_to_str.py  types.py  (+4 more)
scripts/: array_values.gd  class_name2.gd  comments.gd  dict_values.gd  edge_func_args.gd  edge_func_calls.gd  enums.gd  export.gd  expressions.gd  extends.gd  extends2.gd  funcs_and_calls.gd  functions.gd  literals.gd  match.gd  multiline_expressions.gd  newlineless_class.gd  newlineless_func_recursive.gd  newlineless_func_w_if.gd  node_paths.gd  oneliner.gd  recursive_tool.gd  semicolon.gd  setget.gd  short_function.gd  signals.gd  simple_statements.gd  static_typing.gd
tests/: common.py  conftest.py  test_ast.py  test_linter.py  test_parser.py
(+522 files in other folders)
